# OpticalMeasurementParser

./: .gitignore  CMakeLists-FileParse.txt  CMakeLists-FileParse.txt.in  CMakeLists-XMLParser.txt  CMakeLists-XMLParser.txt.in  CMakeLists-nlohmann_json.txt  CMakeLists-nlohmann_json.txt.in  CMakeLists-xmlParser.txt  CMakeLists-xmlParser.txt.in  CMakeLists.txt  CMakePresets.json  generic_cmake_build.txt  main.cpp  readme.md
.github/workflows/: build.yml
cmake/: WCECompilerFlags.cmake  WCEInternalUtils.cmake  WCEProjectMacros.cmake
doc/: OpticalMeasurementParser.md  OpticalMeasurementParser.md.in
include/: OpticsParser.hpp  OpticsProductData.hpp
src/: CMakeLists.txt  Parser.cpp  Parser.hpp  ProductData.cpp  ProductData.hpp  Serializers.hpp  xmlParser.cpp  xmlParser.h
src/BSDFXML/: DB.cpp  DB.hpp  Data.hpp  EnumSerializers.hpp  Enumerators.cpp  Enumerators.hpp  Parser.cpp  Parser.hpp  Serializers.hpp
src/factories/: bsdfxml.cpp  bsdfxml.hpp
test/: BSDFXMLEnumerators.unit.cpp  CMakeLists.txt  InputDifferentEmissivities.unit.cpp  InputFile1.unit.cpp  InputInvertedEmissivities.unit.cpp  bsdf_xml_file_serialization.unit.cpp  convert_optics_to_json.unit.cpp  invalid_xml.unit.cpp  main.cpp  read_bsdf_xml_file.unit.cpp  read_checker_tool_json_file.unit.cpp  read_igsdb_shading_layer_json.unit.cpp  read_json_file_from_disk.unit.cpp  read_optics_file_from_disk.unit.cpp
test/helper/: Common.hpp
test/helper/BSDFXML/: TestHelper.cpp  TestHelper.hpp
test/products/: 2011-SA1-Small-CommaSeparated.XML  2011-SA1-Small-TabSeparated.XML  2011-SA1-Small.XML  2011-SA1.XML  diffuse_optics_file_2.txt  igsdb_12149.json  igsdb_v1_clear_3.json  igsdb_v1_perforated.json  igsdb_v1_venetian.json  igsdb_v2_clear_3.json  invalid.xml
tst/: InputDifferentEmissivities.unit.cpp  InputFile1.unit.cpp  InputInvertedEmissivities.unit.cpp
